# OOPS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Inheritance.cpp  LICENSE  README.md  quicksort.cpp
IntroToOOP/: CMakeLists.txt  Intro.md  IntroToOOPS.cpp  README.md  a.out  abstract.cpp  class1.cpp  classTemplate.cpp  compile time polymorphism.c  copy.cpp  create run time polymorphism  dynAlloc.cpp  dynamicArray.cpp  dynamicObject.cpp  fc.cpp  friend.cpp  funOver.cpp  incrementOver.cpp  opOver.cpp  opOverUnary.cpp  tempAdd.cpp  template.cpp  tryCatch.cpp  vector.cpp  virtual.cpp
IntroToOOP/classTest/: CMakeLists.txt  README.md  a.out  sample1.cpp  sample2.cpp  sample3.cpp  sample4.c  sample5.cpp  sample6.cpp  sample7.cpp
IntroToOOP/inheritance/: CMakeLists.txt  a.out  hierarchical.cpp  hybrid.cpp  multilevel.cpp  multiple.cpp  multiple.out  single.cpp
Search/: CMakeLists.txt  README.md  a.out  linear.c
Search/Binary_Search/: CMakeLists.txt  README.md  binary.c
Search/Interpolation_Search/: Interpolation_search.cpp  README.md
Search/Jump_Search/: Jump_Search.c  README.md  a.out
Search/Linear_Search/: README.md
Sort/: CMakeLists.txt  README.md  bubble.c
Sort/Bubble_Sort/: CMakeLists.txt  (+2 more)
Structures/: CMakeLists.txt  README.md  nstruct.c  practiseStruct.c  struct.c  structinfun.c  structinfunVal.c  todo.txt
pointersInC/: CMakeLists.txt  PointToArray.c  README.md  callloc.c  malloc.c  pointer.c  swapGenVoid.c  swapUsingPointer.c
reviseC/: ArrayReversal.c  CMakeLists.txt  DOB.c  README.md  a.out  ans1.c  ans2.c  ansPrime.c  armstrong.c  arrayAsString.c  arrayDup.c  arraySum.c  arrayip.c  factorial.c  fibonacci.c  findSumSeries.c  findsin.c  iptillo.c  palindrom.c  prime  prime.c  ques4.c  si.c  sum1l.c  sumDig.c  sumOfElements.c  vowels.c
reviseC/ReviseArrays/: CMakeLists.txt  README.md  a.out  ques1.c  ques2.c  ques3.c  ques4.c  ques5.c
reviseC/ReviseConditional/: CMakeLists.txt  README.md  a.out  ques1.c  ques2.c  ques3.c  ques4.c  ques5.c
reviseC/ReviseLoops/: CMakeLists.txt  README.md  a.out  ques1.c  ques2.c  ques3.c  ques4.c  ques5.c  ques6.c
reviseC/ReviseStruct/: CMakeLists.txt  README.md  a.out  ques1.c  ques2.c  ques3.c  ques4.c  ques5.c
reviseC/TAT1/: CMakeLists.txt  README.md  a.out  ques1.cpp  ques2.c  ques3.cpp  ques4  ques4.cpp  ques5.c
(+24 files in other folders)
