cmake_minimum_required(VERSION 3.13)

add_executable(abstract abstract.cpp)
add_executable(class1 class1.cpp)
add_executable(classTemplate classTemplate.cpp)
add_executable(copy copy.cpp)
add_executable(dynAlloc dynAlloc.cpp)
add_executable(dynamicArray dynamicArray.cpp)
add_executable(dynamicObject dynamicObject.cpp)
add_executable(fc fc.cpp)
add_executable(friend friend.cpp)
add_executable(funOver funOver.cpp)
add_executable(incrementOver incrementOver.cpp)
add_executable(IntroToOOPS IntroToOOPS.cpp)
add_executable(opOver opOver.cpp)
add_executable(opOverUnary opOverUnary.cpp)
add_executable(tempAdd tempAdd.cpp)
add_executable(tryCatch tryCatch.cpp)
add_executable(vector vector.cpp)
add_executable(virtual virtual.cpp)

add_subdirectory(classTest)
add_subdirectory(inheritance)