cmake_minimum_required(VERSION 3.13)

add_subdirectory(ReviseArrays)
add_subdirectory(ReviseConditional)
add_subdirectory(ReviseLoops)
add_subdirectory(ReviseStruct)
add_subdirectory(TAT1)

add_executable(ans1 ans1.c)
add_executable(ans2 ans2.c)
add_executable(ansPrime ansPrime.c)
add_executable(armstrong armstrong.c)
add_executable(arrayAsString arrayAsString.c)
add_executable(arrayDup arrayDup.c)
add_executable(arrayip arrayip.c)
add_executable(ArrayReversal ArrayReversal.c)
add_executable(arraySum arraySum.c)
add_executable(DOB DOB.c)
add_executable(factorial factorial.c)
add_executable(fibonacci fibonacci.c)
add_executable(findsin findsin.c)
add_executable(findSumSeries findSumSeries.c)
add_executable(iptillo iptillo.c)
add_executable(palindrom palindrom.c)
add_executable(prime prime.c)
add_executable(ques004 ques4.c)
add_executable(si si.c)
add_executable(sum1l sum1l.c)
add_executable(sumDig sumDig.c)
add_executable(sumOfElements sumOfElements.c)
add_executable(vowels vowels.c)